[package]
name          = "arya"
version       = "0.0.1"
authors       = ["annie <a@hinaria.com>"]
description   = "simple json validation. simple json repair. lightning fast."

documentation = "https://docs.hinaria.com/p/arya"
homepage      = "https://code.hinaria.com/p/arya"
repository    = "https://github.com/hinaria/arya"

license       = "MIT/Apache-2.0"
keywords      = ["io", "read", "write", "slice"]
readme        = "docs/crates.io/readme.md"

include       = ["src/**/*.rs", "Cargo.toml", "docs/crates.io/readme.md"]
