[package]
name          = "arya"
version       = "0.0.2"
authors       = ["annie <a@hinaria.com>"]
description   = "simple json validation. simple json repair. lightning fast."

documentation = "https://docs.hinaria.com/p/arya"
homepage      = "https://code.hinaria.com/p/arya"
repository    = "https://github.com/hinaria/arya"

license       = "MIT/Apache-2.0"
keywords      = ["json", "serialization", "validation", "validate", "repair"]
categories    = ["encoding"]
readme        = "docs/crates.io/readme.md"

include       = ["src/**/*.rs", "Cargo.toml", "docs/crates.io/readme.md"]
